# gawa

./: .gitignore  CONTRIBUTING.md  LICENSE  LLM_testing.ipynb  README.md  pyproject.toml  requirements.txt
configs/: gawa_large.yaml  gawa_medium.yaml  gawa_small.yaml
data/: __init__.py  prepare.py
docs/: README.md  api.md  architecture.md  cli.md  configuration.md  data-prep.md  getting-started.md  training.md  troubleshooting.md
eval/: __init__.py  decode.py  encode.py  evaluate.py
experiments/: 01.train.ipynb  02.test.ipynb  experiments.ipynb
gawa/: __init__.py
model/: __init__.py  char_vocab.py  decoder.py  encoder.py  gaussian.py  gawa_lm.py
scripts/: __init__.py  encode.py  evaluate.py  prepare.py  train.py
tests/: conftest.py
tests/e2e/: test_train_smoke.py
tests/unit/: test_training_checkpoint.py  test_training_config.py  test_training_data.py  test_training_loop.py  test_training_scheduler.py
training/: __init__.py  checkpoint.py  config.py  data.py  loop.py  scheduler.py  trainer.py  utils.py
